--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "ketchup": "git fetch && git reset --hard origin/lecture",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
-    "resetdb":"npm run rollback && npm run migrate && npm run seed"
+    "resetdb": "npm run rollback && npm run migrate && npm run seed"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "connect-session-knex": "^5.0.0",
+    "sqlite3": "^5.1.4",
+    "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^3.0.1",
     "express": "^4.18.2",
-    "express-session": "^1.18.0",
+    "express-session": "^1.17.3",
     "knex": "^2.4.2",
-    "knex-cleaner": "^1.3.1",
-    "sqlite3": "^5.1.4"
+    "knex-cleaner": "^1.3.1"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
